# filescan2db

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/filescan2db/: __init__.py  main.py
src/filescan2sqlite/: __init__.py  main.py
tests/: test_main.py
