[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "filescan2db"
version = "0.2.1"
description = "Scan directories recursively and store file metadata in SQLite"
authors = [
    {name = "Tobias"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
filescan2db = "filescan2db.main:main"
